--- a/pdf_ex/templates/index.html
+++ b/pdf_ex/templates/index.html
@@ -23,8 +23,8 @@
                         <div class="col-md-5 col-sm-5">
                             <div class="switchable__text">
                                 <h3 class="cstm-header-styl">Extract & organise data from PDF files</h3>
-                                
-                                <p class="lead"> An automated softaware that can be used to extract, sort and save data from pdf file in excel format. </p>
+
+                                <p class="lead"> An automated software that can be used to extract, sort and save data from pdf file in excel format. </p>
 
                                 <a href="#start-extract" class="cstm-btn-1">START EXTRACTING</a>
 
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <section class="text-center" id="start-extract">
                 <div class="container">
                     <div class="row">
@@ -46,26 +46,13 @@
                                 <form action="" method="POST" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <div class="col-sm-8 col-sm-offset-2">
-                                        <p class="text-left">Errors: <strong style="color: red">{{ error }}</strong></p>
-                                        <p class="text-left steps-cstm-styl"><span class="cstm-step-clr">Step 01:</span> Select/import the Mpesa pdf from your device</p> 
+                                        <p class="text-left steps-cstm-styl"><span class="cstm-step-clr">Step 01:</span> Select/import the Mpesa pdf from your device</p>
                                         <input class="brdr-styl"  type="file" name="file" class="form-control-file">
                                     </div>
                                     <div class="col-sm-8 col-sm-offset-2">
-                                        <p class="text-left steps-cstm-styl"><span class="cstm-step-clr">Step 02:</span> Choose a filter</p>
-                                            <select class="brdr-styl" name='filter' id="filter">
-                                                <option value="">-------- choose -------</option>
-                                                <option value="Airtime Purchase">Airtime Purchase</option>
-                                                <option value="Fuliza">Fuliza</option>
-                                                <option value="Customer Withdrawal">Customer Withdrawal</option>
-                                                <option value="till">Till</option>
-                                                <option value="Customer Transfer">Customer Transfer</option>
-                                            </select>
-                                    </div>
-                                    <div class="col-sm-8 col-sm-offset-2">
-                                        <p class="text-left steps-cstm-styl"><span class="cstm-step-clr">Step 03:</span> Enter password <i class="helper-txt-styl">(leave blank if pdf does not have password)</i></p>
-                                        <input class="brdr-styl" type="text" name="password" placeholder="Enter password">
-                                        <p style="margin-top: 20px; margin-bottom: -20px;" class="text-left">Num pages: <strong>{{ num_pages }}</strong></p>
-                                    
+                                        <p class="text-left steps-cstm-styl"><span class="cstm-step-clr">Step 02:</span> Enter password <i class="helper-txt-styl">(leave blank if pdf does not have password)</i></p>
+                                        <input class="brdr-styl" type="password" name="password" placeholder="Enter password">
+                                        <p style="margin-top: 20px; margin-bottom: -20px;" class="text-left">Errors: <strong style="color: red">{{ error }}</strong></p>
                                     </div>
                                     <div class="col-sm-8 col-sm-offset-2">
                                     <button type="submit" href="#start-extract" class="btn btn--primary type--uppercase cstm-btn-2">EXTRACT DATA</button> </div>
